# gkw

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  battery_simulation_export.pkl  gkw  init  init.sh  integration.py  package.json  rustfmt.toml  simpletest.py  zz
.garbage/actor/: mod.rs
.garbage/local_lib/async_framework/: Cargo.toml
.garbage/messages/: mod.rs
.garbage/messages/actuator/: contract.rs  stop.rs
.garbage/messages/battery_management/: mod.rs  retrieve_percentage.rs
.garbage/messages/diagnostics/: check.rs  mod.rs
.scripts/: README.md  utils.js
.scripts/.config/: config.js
.scripts/.hooks/: pre-commit.js  pre-push.js
analytics/: README.md
application/: README.md
application/Motor/Motor_test/: Cargo.toml
application/Oak-DTest/: test.py
application/bms_integration/bms_test/: Cargo.toml
application/emg_integration/: Cargo.toml  a.out  emg.cpp
application/emg_integration/python/: battery_simulation_export.pkl  battery_simulation_export1.pkl  data_to_stdout.py  emg.py  emg_testing.py  emg_visualization.py  test.py  testing.py  visualization.py  visualization_skeleton.py
application/emg_integration/src/: lib.rs  library.rs  main.rs
application/emg_testing_integration/testing/: Cargo.toml
application/gkw-utils/: Cargo.toml
application/gkw-utils/src/: lib.rs
application/gkw_utils/: Cargo.toml
application/gkw_utils/src/: lib.rs
application/ipcp/: Cargo.toml
application/ipcp/src/: lib.rs
application/kernel/: Cargo.toml
application/kernel/src/: bichannel.rs  config.rs  init.rs  main.rs  wait.rs
application/kernel/src/components/: analytics.rs  bms.rs  emg.rs  kernel.rs  mod.rs  utils.rs
application/kernel/src/components/kernel/: emg.rs  fsr.rs  grip.rs  mod.rs  parser.rs
application/kernel/src/components2/: bms.rs  emg.rs  kernel.rs  mod.rs  utils.rs
application/kernel/src/kernel/: mod.rs
application/kernel/src/kernel/peripherals/: bms.rs  fingers.rs  mod.rs
application/main/: Cargo.toml
application/main/src/: main.rs
application/messages/: Cargo.toml
application/messages/src/: lib.rs  main.rs
application/motors/src/: grip.rs  lib.rs
application/python_integration/: Cargo.toml
application/python_integration/python/: __init__.py  capitalize.py  read_test.py  test.py  wrapper.py
application/python_integration/python/grasp_analytics/: manager.py  module.py
application/python_integration/python/grasp_analytics/communication/: communication.py
application/python_integration/python/grasp_analytics/data_generation/: randomwalk_generator.py
application/python_integration/python/grasp_analytics/data_generation/battery/: battery_process.py
application/python_integration/python/grasp_analytics/gui/components/images/: guiatlas.atlas
application/python_integration/python/grasp_analytics/interaction/: interaction.py  interaction_touchscreen.py  interaction_voice.py
application/python_integration/python/grasp_analytics/modules/emg/: continuous_model.py  emg.py  emg_live_visualization.html  visualizer.py
application/python_integration/python/grasp_analytics/modules/fsr_matrix/: matrix.py  visualizer.py
application/python_integration/python/grasp_analytics/modules/fsr_matrix/classifier/: deprecated.py
application/python_integration/python/grasp_analytics/modules/fsr_matrix/data_processing/: reader.py  reader_file.py
application/python_integration/python/grasp_analytics/modules/grip_select/: grip.py  selector.py
application/python_integration/python/grasp_analytics/modules/grip_select/crop_cnn/: __main__.py  crop_cnn.py  grip_classifier.py  objectness.py
application/python_integration/python/grasp_analytics/modules/grip_select/mobilenet/: __main__.py  analyzer.py  data_generator.py  main_video.py  objects.py
application/python_integration/python/grasp_analytics/modules/haptic_feedback/: __main__.py  haptic_module.py
application/python_integration/python/grasp_analytics/modules/speech_recognition/: 2995.lm  2995.log_pronounce  2995.vocab
application/python_integration/src/: lib.rs  main.rs
application/vis/: custodes.py  custodiet.py  main.py
application/watchdog/: Cargo.toml
application/watchdog/python/: test.py
application/watchdog/src/: lib.rs  main  main.rs
async_framework/: Cargo.toml
async_framework/examples/: basic.rs  building_a_component.rs  building_components.rs  building_many_components.rs  minimal.rs  moderate.rs  specific.rs
async_framework/oldsrc/: lib.rs
async_framework/oldstuff/: README.md  component_permissions.rs  component_permissions_builder.rs
async_framework/oldstuff/examples/: basic.rs  custom.rs  minimal.rs
async_framework/oldstuff/src/: component.rs  prelude.rs
async_framework/src/: job.rs  lib.rs  prelude.rs  utils.rs
async_framework/src/component/: builder.rs  component.rs  component_error.rs  error.rs  job_type.rs  mod.rs  request.rs  wrapper.rs
config/: simulation.yaml
hooks/: pre-push
kernel/: Cargo.toml
kernel/src/: main.rs
local_lib/async_framework/: README.md
logs/: 949c1dbc-1b16-42ef-8eb7-cd5f5e6d6adf.txt  f55e4ff0-28c2-4b15-ac77-12b7421c9f8e.txt
main_loop/: Cargo.toml
main_loop/src/: main.rs
ml_python/: python_wrapper.py
py/: README.md  test.py
py_io/: README.md  input.json
python/: maestro.py
src/: demofile2.txt  error.rs  json_io.rs  json_io_0.rs  main.rs  state_machine.rs
src/actor/: critical_actor.rs  message_test.rs  mod.rs  monitoring_actor.rs  non_critical_actor.rs  ping.rs  ping_response.rs  status_actor.rs  user_actor.rs
src/json/: mod.rs
src/json_io/: file_io.rs  json_interpretor.rs  mod.rs
src/kernel/: api.rs  mod.rs
src/messages/: message_handler.rs  mod.rs  ping.rs  ping_old.rs  ping_response.rs  response.rs  status_messages.rs  status_responses.rs
src/python/: add_ten.py  echo_test.py  emg.py  matlab.txt  matlab2.txt  read_test.py  roboclaw_3.py  roboclaw_example.py  test_time.py  wrapper.py
src/state_machine/: interface.rs  machine.rs  mod.rs  states.rs
src/stepper/: i2c_interface.rs  mod.rs
state_machine/: Cargo.toml
state_machine/src/: lib.rs
(+114 files in other folders)
