[package]
name = "grasp-system"
version = "0.1.0"
authors = ["nathan-n-poon <nathannpoon@gmail.com>", "raunakab <rabhagat31@gmail.com>", "KelvinKCLee <leekachunkelvin@gmail.com>", "bzhou64 <billzhou64@gmail.com>", "panchalmaharshi8 <panchalmaharshi8@gmail.com>"]
edition = "2018"
license = "MIT"
description = "The main, asynchronous, non-blocking IO, event-loop for the systems software for GRASP, owned by UBC Bionics"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.4.0", features = ["rt", "macros", "net", "io-util", "rt-multi-thread", "sync"] }
lazy_static = "1.4.0"
serde_json = "1.0"
log = "0.4.14"
env_logger = "0.9.0"
derive_more = "0.99.17"

# ASYNC RUNTIME:
# tokio = { version = "1.0.2", features = ["full"] }
# actix = "0.10.0"
# actix-rt = "2.1.0"
# mio = "0.7"
# async_framework = { path = "local_lib/async_framework"}

# MICRO-MAESTRO INTERFACE:
# raestro = "0.1.0"

# JSON SER. AND DESER.:

# PYTHON INTERPRETER BINDINGS:
# [dependencies.pyo3]
# version = "0.13.1"
# features = ["auto-initialize"]
