[package]
name = "ipcp"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# serialization + deserialization utils
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
serde_repr = "0.1.7"

# universals identifiers
uuid = { version = "0.8.2", features = ["serde"] }

# convenience utils
derivative = "2.2.0"
strum = "0.24.0"
strum_macros = "0.24.0"

# gkw errors + results
gkw_utils = { version = "0.3.1", path = "../gkw_utils" }
