[package]
name = "kernel"
version = "0.1.0"
authors = [
    "nathan-n-poon <nathannpoon@gmail.com>",
    "raunakab <rabhagat31@gmail.com>",
    "bzhou64 <billzhou64@gmail.com>",
]
edition = "2018"
license = "MIT"
description = "The main, asynchronous, non-blocking IO, event-loop for the systems software for GRASP, owned by UBC Bionics"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# async runtime
tokio = { version = "1.4.0", features = ["rt", "macros", "net", "io-util", "rt-multi-thread", "sync"] }

# global (lazily loaded) statics
lazy_static = "1.4.0"

# serialization + deserialization utils
serde_json = "1.0.79"

# logging + stringifying utils
log = "0.4.14"
env_logger = "0.9.0"
derive_more = "0.99.17"

# internal libraries
ipcp = { version = "0.1.0", path = "../ipcp" }
# gkw-utils = { version = "0.3.1", path = "../gkw-utils" }
