[package]
name = "kernel"
version = "0.1.0"
authors = [
    "raunakab <rabhagat31@gmail.com>",
    "nathan-n-poon <nathannpoon@gmail.com>",
]
edition = "2021"
license = "MIT"
description = "The main, synchronous, non-blocking IO, event-loop for the systems software for GRASP, owned by UBC Bionics."

[dependencies]
# Purpose:
# Error utils and propagation.
anyhow = { version = "1.0.66", features = ["backtrace"] }

# Purpose:
# (Better) Channels implementation.
crossbeam = "0.8.2"

# Purpose:
# Runtime configuration loading.
config = "0.13.2"

# Purpose:
# Serialization and deserialization primitives.
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.79"

# Purpose:
# Logging utilities.
log = "0.4.17"
pretty_env_logger = "0.4.0"

# Purpose:
# Motor control utilities.
[target.'cfg(target_arch = "armv7-unknown-linux-gnueabihf")'.dependencies]
raestro = "0.3.0"

[features]
tcp_edge = []
pseudo_analytics = []
simulation = [
    "tcp_edge",
    "pseudo_analytics",
]
