[package]
name = "async_framework"
version = "0.1.0"
authors = ["raunakab <rabhagat31@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.4.0", features = ["rt", "net", "io-util", "rt-multi-thread", "sync"] }
lazy_static = "1.4.0"
